control center backoffice

--- a/frontend/src/app/backoffice/dashboard/dashboard.component.html
+++ b/frontend/src/app/backoffice/dashboard/dashboard.component.html
@@ -56,6 +56,9 @@
         <span class="fs-5 fw-semibold text-primary">Dashboard</span>
         <div>
           <a href="#" class="me-3 text-decoration-none text-primary">Profile</a>
+          <a class="nav-link text-white" routerLink="/dashboard/controlcenters"
+            >Control Centers</a
+          >
           <a href="#" class="text-decoration-none text-danger">Logout</a>
         </div>
       </header>
