--- a/frontend/src/app/backoffice/dashboard/dashboard.component.html
+++ b/frontend/src/app/backoffice/dashboard/dashboard.component.html
@@ -23,6 +23,12 @@
           >
         </li>
         <li class="nav-item">
+          <a class="nav-link text-white" routerLink="/dashboard/controlcenters"
+            >Control Centers</a
+          >
+        </li>
+
+        <li class="nav-item">
           <a
             class="nav-link text-white"
             routerLink="/alerts"
@@ -56,9 +62,7 @@
         <span class="fs-5 fw-semibold text-primary">Dashboard</span>
         <div>
           <a href="#" class="me-3 text-decoration-none text-primary">Profile</a>
-          <a class="nav-link text-white" routerLink="/dashboard/controlcenters"
-            >Control Centers</a
-          >
+
           <a href="#" class="text-decoration-none text-danger">Logout</a>
         </div>
       </header>
