rouuter are done

--- a/frontend/src/app/backoffice/dashboard/dashboard.component.html
+++ b/frontend/src/app/backoffice/dashboard/dashboard.component.html
@@ -7,50 +7,23 @@
       <div class="mb-4 text-center fw-bold fs-4 text-white">SafeGuard</div>
       <ul class="nav flex-column">
         <li class="nav-item">
-          <a
-            class="nav-link text-white"
-            routerLink="/dashboard"
-            routerLinkActive="active"
-            >Dashboard</a
-          >
+          <a class="nav-link text-white" routerLink="/dashboard">Dashboard</a>
         </li>
         <li class="nav-item">
-          <a
-            class="nav-link text-white"
-            routerLink="/users"
-            routerLinkActive="active"
-            >Users</a
-          >
+          <a class="nav-link text-white" routerLink="/users">Users</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" routerLink="/dashboard/controlcenters"
-            >Control Centers</a
-          >
+          <a routerLink="/dashboard/controlcenters"> Control Centers </a>
         </li>
 
         <li class="nav-item">
-          <a
-            class="nav-link text-white"
-            routerLink="/alerts"
-            routerLinkActive="active"
-            >Alerts</a
-          >
+          <a class="nav-link text-white" routerLink="/alerts">Alerts</a>
         </li>
         <li class="nav-item">
-          <a
-            class="nav-link text-white"
-            routerLink="/reports"
-            routerLinkActive="active"
-            >Reports</a
-          >
+          <a class="nav-link text-white" routerLink="/reports">Reports</a>
         </li>
         <li class="nav-item">
-          <a
-            class="nav-link text-white"
-            routerLink="/settings"
-            routerLinkActive="active"
-            >Settings</a
-          >
+          <a class="nav-link text-white" routerLink="/settings">Settings</a>
         </li>
       </ul>
     </nav>
