--- a/frontend/src/app/backoffice/dashboard/dashboard.component.html
+++ b/frontend/src/app/backoffice/dashboard/dashboard.component.html
@@ -13,7 +13,9 @@
           <a class="nav-link text-white" routerLink="/users">Users</a>
         </li>
         <li class="nav-item">
-          <a routerLink="/dashboard/controlcenters"> Control Centers </a>
+          <a class="nav-link text-white" routerLink="/dashboard/controlcenters">
+            Control Centers
+          </a>
         </li>
 
         <li class="nav-item">
