--- a/frontend/src/app/frontoffice/main/main.component.html
+++ b/frontend/src/app/frontoffice/main/main.component.html
@@ -22,6 +22,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link text-primary" href="#">Tarifs</a>
+        </li> 
+        <li class="nav-item">
+          <a class="nav-link text-primary" href="#">Events</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-primary" href="#">Contact</a>
