--- a/frontend/src/app/backoffice/dashboard/dashboard.component.html
+++ b/frontend/src/app/backoffice/dashboard/dashboard.component.html
@@ -19,7 +19,12 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link text-white" routerLink="/alerts">Alerts</a>
+          <a
+            class="nav-link text-white"
+            routerLink="/dashboard/ai-control-centers"
+          >
+            AI Control Centers
+          </a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" routerLink="/reports">Reports</a>
