backenddjango & backoffice angular

--- a/frontend/src/app/backoffice/dashboard/dashboard.component.html
+++ b/frontend/src/app/backoffice/dashboard/dashboard.component.html
@@ -22,6 +22,15 @@
             Control Center Access
           </a>
         </li>
+        <li class="nav-item">
+          <a
+            class="nav-link text-white"
+            routerLink="/backoffice/scenarios"
+            routerLinkActive="active"
+          >
+            Scénarios de Sécurité
+          </a>
+        </li>
       </ul>
     </nav>
 
