--- a/frontend/src/app/frontoffice/main/main.component.html
+++ b/frontend/src/app/frontoffice/main/main.component.html
@@ -29,6 +29,12 @@
         <li class="nav-item">
           <a class="nav-link text-primary" href="#">Connexion</a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link text-primary" routerLink="/control-centers">
+            Control Center
+          </a>
+        </li>
       </ul>
     </div>
   </div>
